--- a/views/Species.xml
+++ b/views/Species.xml
@@ -1,14 +1,18 @@
 <odoo>
+
     <record model="ir.ui.view" id="plant_form_view">
         <field name="name">plant.form</field>
-        <field name="model">npi.Plant</field>
+        <field name="model">npi.plant</field>
         <field name="arch" type="xml">
             <form string="Plant Form">
                 <sheet>
                     <group>
+                        <field name="name" />
+                        <field name="vulgarName" />
+                        <field name="numberSpecies" />
                         <field name="floration"/>
                         <field name="florationPeriod"/>
-                        <field name="Animal_ids"/>
+                        <field name="animal_ids"/>
                     </group>
                 </sheet>
             </form>
@@ -17,14 +21,25 @@
 
     <record model="ir.ui.view" id="plant_tree_view">
         <field name="name">plant.tree</field>
-        <field name="model">npi.Plant</field>
+        <field name="model">npi.plant</field>
         <field name="arch" type="xml">
             <tree string="Plant Tree">
-                <field name="name"/>
-                    <field name="floration"/>
-                    <field name="florationPeriod"/>
-                    <field name="Animal_ids"/>
-            </form>
+                <field name="name" />
+                <field name="vulgarName" />
+                <field name="numberSpecies" />
+                <field name="floration"/>
+                <field name="florationPeriod"/>
+                <field name="animal_ids"/>
+            </tree>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="plant_list_action">
+        <field name="name">Plant</field>
+        <field name="res_model">npi.plant</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">Insert a plant</p>              
         </field>
     </record>
 
@@ -32,11 +47,14 @@
 
     <record model="ir.ui.view" id="animal_form_view">
         <field name="name">animal.form</field>
-        <field name="model">npi.Animal</field>
+        <field name="model">npi.animal</field>
         <field name="arch" type="xml">
             <form string="Animal Form">
                 <sheet>
                     <group>
+                        <field name="name" />
+                        <field name="vulgarName" />
+                        <field name="numberSpecies" />
                         <field name="alimentation"/>
                         <field name="reproductionPeriod"/>
                     </group>
@@ -47,24 +65,38 @@
 
     <record model="ir.ui.view" id="animal_tree_view">
         <field name="name">animal.tree</field>
-        <field name="model">npi.Animal/field>
+        <field name="model">npi.animal</field>
         <field name="arch" type="xml">
             <tree string="Animal Tree">
+                <field name="name" />
+                <field name="vulgarName" />
+                <field name="numberSpecies" />
                 <field name="alimentation"/>
                 <field name="reproductionPeriod"/>
-            </form>
+            </tree>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="animal_list_action">
+        <field name="name">Animal</field>
+        <field name="res_model">npi.animal</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">Insert an animal</p>              
         </field>
     </record>
 
 
-
     <record model="ir.ui.view" id="mineral_form_view">
         <field name="name">mineral.form</field>
-        <field name="model">npi.Mineral</field>
+        <field name="model">npi.mineral</field>
         <field name="arch" type="xml">
             <form string="Mineral Form">
                 <sheet>
                     <group>
+                        <field name="name" />
+                        <field name="vulgarName" />
+                        <field name="numberSpecies" />
                         <field name="mineralType"/>
                     </group>
                 </sheet>
@@ -74,12 +106,27 @@
 
     <record model="ir.ui.view" id="mineral_tree_view">
         <field name="name">mineral.tree</field>
-        <field name="model">npi.Mineral</field>
+        <field name="model">npi.mineral</field>
         <field name="arch" type="xml">
             <tree string="Mineral Tree">
-                <field name="name"/>
-                    <field name="mineralType"/>
-            </form>
+                <field name="name" />
+                <field name="vulgarName" />
+                <field name="numberSpecies" />
+                <field name="mineralType"/>
+            </tree>
         </field>
     </record>
+
+    <record model="ir.actions.act_window" id="mineral_list_action">
+        <field name="name">Mineral</field>
+        <field name="res_model">npi.mineral</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">Insert a mineral</p>              
+        </field>
+    </record>
+
+    <menuitem id="plant_menu" name="Plant" parent="npi_menu" action="plant_list_action"/>
+    <menuitem id="animal_menu" name="Animal" parent="npi_menu" action="animal_list_action"/>
+    <menuitem id="mineral_menu" name="Mineral" parent="npi_menu" action="mineral_list_action"/>
 </odoo>
