--- a/views/Visitor.xml
+++ b/views/Visitor.xml
@@ -1,7 +1,7 @@
 <odoo>
     <record model="ir.ui.view" id="visitor_form_view">
         <field name="name">visitor.form</field>
-        <field name="model">npi.Visitor</field>
+        <field name="model">npi.visitor</field>
         <field name="arch" type="xml">
             <form string="Visitor Form">
                 <sheet>
@@ -10,9 +10,9 @@
                         <field name="name"/>
                         <field name="adress"/>
                         <field name="job"/>
-                        <field name="NaturalPark_id"/>
-                        <field name="Managment_id"/>
-                        <field name="Hostel_id"/>
+                        <field name="naturalPark_id"/>
+                        <field name="managment_id"/>
+                        <field name="hostel_id"/>
                     </group>
                 </sheet>
             </form>
@@ -21,17 +21,29 @@
 
     <record model="ir.ui.view" id="visitor_tree_view">
         <field name="name">visitor.tree</field>
-        <field name="model">npi.Visitor</field>
+        <field name="model">npi.visitor</field>
         <field name="arch" type="xml">
             <tree string="Visitor Tree">
                 <field name="dni"/>
                 <field name="name"/>
                 <field name="adress"/>
                 <field name="job"/>
-                <field name="NaturalPark_id"/>
-                <field name="Managment_id"/>
-                <field name="Hostel_id"/>
-            </form>
+                <field name="naturalPark_id"/>
+                <field name="managment_id"/>
+                <field name="hostel_id"/>
+            </tree>
         </field>
     </record>
+
+    <record model="ir.actions.act_window" id="visitor_list_action">
+        <field name="name">Visitor</field>
+        <field name="res_model">npi.visitor</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">Insert visitor</p>
+        </field>
+    </record>
+
+
+    <menuitem id="visitor_menu" name="Visitor" parent="npi_menu" action="visitor_list_action"/>
 </odoo>
