--- a/views/species.xml
+++ b/views/species.xml
@@ -10,6 +10,7 @@
                         <field name="name" />
                         <field name="vulgarName" />
                         <field name="numberSpecies" />
+                        <field name="area_ids"/>
                         <field name="floration"/>
                         <field name="florationPeriod"/>
                         <field name="animal_ids"/>
@@ -27,6 +28,7 @@
                 <field name="name" />
                 <field name="vulgarName" />
                 <field name="numberSpecies" />
+                <field name="area_ids"/>
                 <field name="floration"/>
                 <field name="florationPeriod"/>
                 <field name="animal_ids"/>
@@ -55,6 +57,7 @@
                         <field name="name" />
                         <field name="vulgarName" />
                         <field name="numberSpecies" />
+                        <field name="area_ids"/>
                         <field name="alimentation"/>
                         <field name="reproductionPeriod"/>
                     </group>
@@ -71,6 +74,7 @@
                 <field name="name" />
                 <field name="vulgarName" />
                 <field name="numberSpecies" />
+                <field name="area_ids"/>
                 <field name="alimentation"/>
                 <field name="reproductionPeriod"/>
             </tree>
@@ -97,6 +101,7 @@
                         <field name="name" />
                         <field name="vulgarName" />
                         <field name="numberSpecies" />
+                        <field name="area_ids"/>
                         <field name="mineralType"/>
                     </group>
                 </sheet>
@@ -112,6 +117,7 @@
                 <field name="name" />
                 <field name="vulgarName" />
                 <field name="numberSpecies" />
+                <field name="area_ids"/>
                 <field name="mineralType"/>
             </tree>
         </field>
