--- a/view/community.xml
+++ b/view/community.xml
@@ -2,7 +2,7 @@
 
         <record model="ir.ui.view" id="community_form_view">
             <field name="name">community.form</field>
-            <field name="model">RecuperacionOdooCristianMarin.community</field>
+            <field name="model">odoonp.community</field>
             <field name="arch" type="xml">
                 <form string="Community Form">
                     <sheet>
@@ -18,7 +18,7 @@
 
         <record model="ir.ui.view" id="community_tree_view">
             <field name="name">community.tree</field>
-            <field name="model">RecuperacionOdooCristianMarin.community</field>
+            <field name="model">odoonp.community</field>
             <field name="arch" type="xml">
                 <tree string="Community Tree">
                     <field name="name"/>
@@ -30,7 +30,7 @@
 
         <record model="ir.actions.act_window" id="community_list_action">
             <field name="name">Community</field>
-            <field name="res_model">RecuperacionOdooCristianMarin.community</field>
+            <field name="res_model">odoonp.community</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">New community</p>
@@ -38,6 +38,6 @@
         </record>
 
 
-        <menuitem id="community_menu" name="Autonomous Community" parent="RecuperacionOdooCristianMarin_menu" action="community_list_action"/>
+        <menuitem id="community_menu" name="Autonomous Community" parent="odoonp_menu" action="community_list_action"/>
 
 </odoo> 
