--- a/view/species.xml
+++ b/view/species.xml
@@ -2,7 +2,7 @@
 
         <record model="ir.ui.view" id="plant_form_view">
             <field name="name">plant.form</field>
-            <field name="model">RecuperacionOdooCristianMarin.plant</field>
+            <field name="model">odoonp.plant</field>
             <field name="arch" type="xml">
                 <form string="Plant Form">
                     <sheet>
@@ -25,7 +25,7 @@
 
         <record model="ir.ui.view" id="animal_form_view">
             <field name="name">animal.form</field>
-            <field name="model">RecuperacionOdooCristianMarin.animal</field>
+            <field name="model">odoonp.animal</field>
             <field name="arch" type="xml">
                 <form string="Animal Form">
                     <sheet>
@@ -47,7 +47,7 @@
 
         <record model="ir.ui.view" id="mineral_form_view">
             <field name="name">mineral.form</field>
-            <field name="model">RecuperacionOdooCristianMarin.mineral</field>
+            <field name="model">odoonp.mineral</field>
             <field name="arch" type="xml">
                 <form string="Mineral Form">
                     <sheet>
@@ -65,7 +65,7 @@
 
         <record model="ir.actions.act_window" id="plant_list_action">
             <field name="name">Plant</field>
-            <field name="res_model">RecuperacionOdooCristianMarin.plant</field>
+            <field name="res_model">odoonp.plant</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Inserte una planta</p>              
@@ -74,7 +74,7 @@
 
         <record model="ir.actions.act_window" id="mineral_list_action">
             <field name="name">Mineral</field>
-            <field name="res_model">RecuperacionOdooCristianMarin.mineral</field>
+            <field name="res_model">odoonp.mineral</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Insertar un mineral</p>
@@ -83,7 +83,7 @@
 
         <record model="ir.actions.act_window" id="animal_list_action">
             <field name="name">Animal</field>
-            <field name="res_model">RecuperacionOdooCristianMarin.animal</field>
+            <field name="res_model">odoonp.animal</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Insertar un animal</p>
@@ -91,8 +91,8 @@
         </record>
 
 
-        <menuitem id="plant_menu" name="Plant" parent="RecuperacionOdooCristianMarin_menu" action="plant_list_action"/>
-        <menuitem id="animal_menu" name="Animal" parent="RecuperacionOdooCristianMarin_menu" action="animal_list_action"/>
-        <menuitem id="mineral_menu" name="Mineral" parent="RecuperacionOdooCristianMarin_menu" action="mineral_list_action"/>
+        <menuitem id="plant_menu" name="Plant" parent="odoonp_menu" action="plant_list_action"/>
+        <menuitem id="animal_menu" name="Animal" parent="odoonp_menu" action="animal_list_action"/>
+        <menuitem id="mineral_menu" name="Mineral" parent="odoonp_menu" action="mineral_list_action"/>
 
 </odoo> 
